@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_failure_output" errors="1" failures="25" tests="26" time="0.316" hostname="unknown" timestamp="2015-03-31T22:42:32">
+<testsuite name="test_failure_output" errors="1" failures="25" tests="26" time="0.4" hostname="unknown" timestamp="2015-04-13T17:48:53">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure><![CDATA[(no message available)
@@ -165,8 +165,8 @@ In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_ou
 In C:\Users\Alexander\repositories\mlunit\src\@function_test_case\run_test.m at line 21
 In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_test.m at line 50
 In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_suite.m at line 63
-In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 73
-In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36]]></error>
+In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 77
+In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 42]]></error>
   </testcase>
   <testcase classname="test_failure_output" name="test_nested_functions">
     <failure><![CDATA[Nested function test.
